fix tweet spacing issues

--- a/mods/redsquare/web/css/redsquare-main.css
+++ b/mods/redsquare/web/css/redsquare-main.css
@@ -36,7 +36,7 @@ span.redsquare-home-red-square+span {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   font-size: 1.7rem;
-  line-height: 2.2rem;
+  line-height: 2rem;
   white-space: pre-wrap;
   overflow-wrap: break-word;
 }
@@ -326,7 +326,7 @@ span.redsquare-home-red-square+span {
 
 .youtube-embed-container {
   width: 100%;
-  margin: 15px 0px;
+  margin: 0px;
 }
 
 .youtube-embed {
